# agentsdk-

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  fibonacci.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  sitemap.xml  test_auth.py  test_billing_orgs.py  test_new_tools.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml
agentsdk/: __init__.py  agent.py  cli.py  exceptions.py  llm.py  messages.py
agentsdk/graph/: __init__.py  bus.py  graph.py  node.py  runner.py
agentsdk/mcp/: __init__.py  client.py
agentsdk/memory/: __init__.py  embedder.py  rag_memory.py  vector_store.py
agentsdk/observability/: __init__.py  middleware.py  tracer.py
agentsdk/persistence/: __init__.py  checkpoint.py  file_store.py  session.py
agentsdk/tools/: __init__.py  base.py  builtin.py  registry.py
api-reference/: index.html
concepts/agent-loop/: index.html
concepts/multi-agent/: index.html
concepts/observability/: index.html
concepts/persistence/: index.html
concepts/tools/: index.html
cookbook/coding-agent/: index.html
cookbook/multi-agent-pipeline/: index.html
cookbook/research-agent/: index.html
docs/: api-reference.md  index.md  installation.md  quickstart.md
docs/concepts/: agent-loop.md  multi-agent.md  observability.md  persistence.md  tools.md
docs/cookbook/: coding-agent.md  multi-agent-pipeline.md  research-agent.md
installation/: index.html
launch/: blog_post.md  github_community_setup.md  hn_post.md  launch_checklist.md  product_hunt_post.md  twitter_thread.md
projects/coding_agent/: README.md  agent.py  main.py
projects/research_agent/: README.md  agent.py  main.py
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api-reference/: index.html
site/concepts/agent-loop/: index.html
site/concepts/multi-agent/: index.html
site/concepts/observability/: index.html
site/concepts/persistence/: index.html
site/concepts/tools/: index.html
site/cookbook/coding-agent/: index.html
site/cookbook/multi-agent-pipeline/: index.html
site/cookbook/research-agent/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: conftest.py  test_edge_cases.py  test_error_scenarios.py  test_fileupload_scheduler.py  test_integration.py  test_load.py  test_mcp.py  test_monitor.py  test_ollama_live.py  test_pipeline.py  test_rag_memory.py  test_selenium_ui.py  test_smoke.py  test_webui.py  test_xml_parser.py
webui/: .env.example  README.md  docker-compose.yml
webui/backend/: .dockerignore  Dockerfile  agent_manager.py  auth.py  file_handler.py  main.py  mcp_manager.py  metrics_store.py  models.py  orgs.py  pipeline_manager.py  requirements.txt  scheduler.py
webui/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
webui/frontend/src/: App.jsx  index.css  main.jsx
webui/frontend/src/components/: AgentStatusBar.jsx  ChatWindow.jsx  CommandPalette.jsx  MemoryModal.jsx  MessageBubble.jsx  SessionSidebar.jsx  TokenCounter.jsx  ToolCallTrace.jsx
webui/frontend/src/lib/: api.js
webui/frontend/src/pages/: AgentConfigPage.jsx  LoginPage.jsx  MCPPage.jsx  MemoryPage.jsx  MonitorPage.jsx  PipelinePage.jsx  SchedulePage.jsx
