[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsdk-py"
version = "0.2.0"
description = "A lightweight Python SDK for building AI agents with tools, memory, and multi-agent pipelines — powered by Groq"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "agents", "llm", "groq", "sdk", "multi-agent", "react-agent", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "groq>=0.9",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
]
github = ["PyGithub>=2.0"]
scraping = ["beautifulsoup4>=4.12"]
sql = ["aiosqlite>=0.20", "asyncpg>=0.29"]
all-tools = [
    "beautifulsoup4>=4.12",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/vishwa0198/agentsdk"
Documentation = "https://vishwa0198.github.io/agentsdk"
Repository = "https://github.com/vishwa0198/agentsdk"
Changelog = "https://github.com/vishwa0198/agentsdk/blob/main/CHANGELOG.md"

[project.scripts]
scaffold-agent = "agentsdk.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentsdk*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
